<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.AddChatFragment">

    <EditText
        android:id="@+id/editText_enterChatName_addchatfragment"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:hint="@string/editText_addChat"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_addUser_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addChat_addchatfragment"
        app:layout_constraintVertical_bias="0.178" />

    <ImageButton
        android:id="@+id/imageButton_addChat_addchatfragment"
        android:layout_width="383dp"
        android:layout_height="46dp"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/add_button_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_root"
        app:layout_constraintVertical_bias="0.268" />

    <ImageButton
        android:id="@+id/imageButton_clearChat_addchatfragment"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_enterUser"
        app:layout_constraintTop_toBottomOf="@+id/textView_userentryinstructions" />

    <EditText
        android:id="@+id/editText_enterUser"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editText_addusername"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_root"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_clearChat_addchatfragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userentryinstructions" />

    <TextView
        android:id="@+id/textView_addChat_addchatfragment"
        android:layout_width="356dp"
        android:layout_height="24dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:text="@string/textview_addchatname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_enterChatName_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_addUser_addchatfragment"
        android:layout_width="358dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textview_addusername"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_userentryinstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterChatName_addchatfragment" />

    <TextView
        android:id="@+id/textView_userentryinstructions"
        android:layout_width="361dp"
        android:layout_height="19dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="25dp"
        android:text="@string/textview_userentryinstructions"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText_enterUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addUser_addchatfragment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_root"
        android:layout_width="393dp"
        android:layout_height="363dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_addChat_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterUser" />


</androidx.constraintlayout.widget.ConstraintLayout>